Notice with the builders that I tried to follow the setup used in other projects, but this often didn't work for HBase's column-families. The FindQualifiersDriver works, but only from command line within a VM which runs Hadoop + HBase. It shows HBase working in combination with MapReduce. The class will be improved so it's method can be called by other classes. All other classes have been tested by connecting it to our DataCleaner. I'll make more Unit Tests next. hbase/pom.xml changes: With 'hbase-client' I needed to remove 2 exclusion. I've added 'hbase-server' dependency.